[gd_scene load_steps=12 format=3 uid="uid://ba57op2s7d420"]

[ext_resource type="Script" path="res://brick/regen_brick/regen_brick.gd" id="1_di8nd"]
[ext_resource type="Texture2D" uid="uid://80kfgxc2xoa2" path="res://assets/glow/1.png" id="2_t1bm5"]
[ext_resource type="Texture2D" uid="uid://3vduy252nlpx" path="res://assets/glow/2.png" id="3_11sx8"]
[ext_resource type="Texture2D" uid="uid://bptbyq7mfv5k2" path="res://assets/glow/3.png" id="4_62oh5"]
[ext_resource type="Texture2D" uid="uid://ba4gg2i4aybau" path="res://assets/glow/4.png" id="5_v0v56"]
[ext_resource type="Texture2D" uid="uid://uurjmopfnr2g" path="res://assets/glow/5.png" id="6_c4tdj"]
[ext_resource type="Texture2D" uid="uid://doral2nq12xvb" path="res://assets/glow/6.png" id="7_7yf7k"]
[ext_resource type="Texture2D" uid="uid://cei1fflrwrjvc" path="res://assets/glow/7.png" id="8_0pyw3"]

[sub_resource type="SpriteFrames" id="SpriteFrames_fq6w2"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_t1bm5")
}, {
"duration": 1.0,
"texture": ExtResource("3_11sx8")
}, {
"duration": 1.0,
"texture": ExtResource("4_62oh5")
}, {
"duration": 1.0,
"texture": ExtResource("5_v0v56")
}, {
"duration": 1.0,
"texture": ExtResource("6_c4tdj")
}, {
"duration": 1.0,
"texture": ExtResource("7_7yf7k")
}, {
"duration": 1.0,
"texture": ExtResource("8_0pyw3")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0sksc"]
size = Vector2(52, 33)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bmbwn"]
size = Vector2(55, 35)

[node name="RegenBrick" type="StaticBody2D" node_paths=PackedStringArray("animated_sprite_2d") groups=["brick"]]
script = ExtResource("1_di8nd")
animated_sprite_2d = NodePath("AnimatedSprite2D")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_fq6w2")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 0.5)
shape = SubResource("RectangleShape2D_0sksc")

[node name="Area2D" type="Area2D" parent="."]

[node name="HitBoxShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0.5, 0.5)
shape = SubResource("RectangleShape2D_bmbwn")
debug_color = Color(0.976471, 0, 0.415686, 0.419608)

[node name="RegenTimer" type="Timer" parent="."]

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="RegenTimer" to="." method="_on_regen_timer_timeout"]
